--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "scripts": {
     "build": "rm -rf dist && yarn tsc && cp yarn.lock dist/",
+    "postbuild": "cp -r src/pages dist/src",
     "start:dev": "nodemon src/index.ts"
   },
   "dependencies": {
