--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,29 +1,90 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Build & Deploy Google Fonts Wrapper
+name: Build and Push Docker Image
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main  # Trigger beim Push auf den main-Branch
 
 jobs:
-  deploy:
-    name: Build Google Fonts Wrapper
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Install rsync
-        run: |
-          sudo apt-get update
-          sudo apt-get install rsync
-          sudo apt-get install -y sshpass
-      - name: Building Google Fonts Wrapper
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js 22
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'  # Setze hier Node.js Version 22
+
+      - name: Install dependencies using Yarn
         run: |
           yarn install
-          yarn build
-      - name: Deploying Google Fonts Wrapper
+
+      - name: Build node.js Application using Yarn
         run: |
-          rsync -r -e 'sshpass -p "${{ secrets.DEPLOY_PASSWORD }}" ssh -o StrictHostKeyChecking=no' ./dist/ ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:${{ secrets.DEPLOY_BASE_URL }}/fonts.pdaus.de
+          yarn build
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to GitHub Packages
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push Docker image
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64/v8 -t ghcr.io/${{ github.repository }}/GoogleFontWrapper-be:latest --push .
+
+  deploy:
+    name: Deploy App
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: Deploy app
+        uses: appleboy/ssh-action@v1.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER}}
+          key: ${{ secrets.SSH_KEY }}
+          envs: GITHUB_TOKEN
+          script: |
+            echo "${GITHUB_TOKEN}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin &&
+            docker pull ghcr.io/${{ github.repository }}/GoogleFontWrapper:latest &&
+            # Remove existing container if it exists (ignore errors if not found)
+            docker rm -f googlefontwrapper || true &&
+            # Run a new container instance with restart policy and port mapping
+            docker run -d --restart=on-failure:5 -p 65002:3001 --name googlefontwrapper ghcr.io/${{ github.repository }}/GoogleFontWrapper:latest
+
+  cleanup:
+    name: Cleanup container registry
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    permissions:
+      packages: write
+
+    steps:
+      - uses: dataaxiom/ghcr-cleanup-action@v1
+        with:
+          package: google-font-wrapper/GoogleFontWrapper
+          delete-untagged: true
+          keep-n-tagged: 3
