--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64/v8 -t ghcr.io/${{ github.repository }}/GoogleFontWrapper-be:latest --push .
+          docker buildx build --platform linux/amd64,linux/arm64/v8 -t ghcr.io/${{ github.repository }}/google-font-wrapper:latest --push .
 
   deploy:
     name: Deploy App
@@ -68,11 +68,11 @@ jobs:
           envs: GITHUB_TOKEN
           script: |
             echo "${GITHUB_TOKEN}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin &&
-            docker pull ghcr.io/${{ github.repository }}/GoogleFontWrapper:latest &&
+            docker pull ghcr.io/${{ github.repository }}/google-font-wrapper:latest &&
             # Remove existing container if it exists (ignore errors if not found)
             docker rm -f googlefontwrapper || true &&
             # Run a new container instance with restart policy and port mapping
-            docker run -d --restart=on-failure:5 -p 65002:3001 --name googlefontwrapper ghcr.io/${{ github.repository }}/GoogleFontWrapper:latest
+            docker run -d --restart=on-failure:5 -p 65002:3001 --name googlefontwrapper ghcr.io/${{ github.repository }}/google-font-wrapper:latest
 
   cleanup:
     name: Cleanup container registry
@@ -85,6 +85,6 @@ jobs:
     steps:
       - uses: dataaxiom/ghcr-cleanup-action@v1
         with:
-          package: google-font-wrapper/GoogleFontWrapper
+          package: google-font-wrapper/google-font-wrapper
           delete-untagged: true
           keep-n-tagged: 3
